hw 16 5)d wrong formula

--- a/practice.tex
+++ b/practice.tex
@@ -8,10 +8,51 @@
 \usepackage{amssymb}
 
 \title{LaTeX Practice}
-\author{Raul Billalobos}
+\author{Raul Villalobos}
 
 \begin{document}
 \maketitle
+
+$$
+U(x) = \frac{mw^2 x^2}{2} 
+$$
+$$
+E_n = (n + \frac{1}{2})\hbar\omega
+$$
+$$
+\psi_0(x) = \left(\frac{\beta^2}{\pi}\right)^{\frac{1}{4}} e^{-\frac{1}{2} \beta^2 x^2}
+$$
+
+% Specific wave function
+$$
+-\frac{\hbar^2}{2m}\frac{d^2}{dx^2}\psi(x) + U(x)\psi(x) = E\psi(x)
+$$
+$$
+\beta = \sqrt{\frac{m\omega}{\hbar}}
+$$
+
+(4) d. From $ n = 4 $ to $ n = 1 $ \newline
+Find energy (eV) \newline 
+$$ E_p = E_4 - E_1 $$
+$$ E_n = \frac{\pi^2 \hbar^2}{2mL^2} n^2 $$
+$$ E_n = \frac{\left(\pi\hbar\right)^2}{2mL^2} n^2 $$
+$$ E_n = \frac{\left(\pi\frac{h}{2\pi}\right)^2}{2mL^2} n^2 $$
+$$ E_n = \frac{\left(\frac{h}{2}\right)^2}{2mL^2} n^2 $$
+$$ E_n = \frac{h^2}{8mL^2} n^2 $$
+$$ E_p = \frac{h^2}{8mL^2} 4^2 - \frac{h^2}{8mL^2} 1^2 $$
+$$ E_p = \frac{h^2}{8mL^2} \left(4^2 - 1^2\right)$$
+$$ E_p = \frac{h^2}{8mL^2} \left(15\right)$$
+$$ E_p = \frac{\left(6.626 \times 10^{-34} \text{J s}\right)^2}{8\left(1.67 \times 10^{-27} \text{kg}\right)\left(1.733 \times 10^{-11}\right)^2} \left(15\right)$$
+$$ E_p = 1.094 \times 10^{-19} \text{J} $$
+$$ E_p = 1.094 \times 10^{-19} \text{J}\left(\frac{1 \text{eV}}{1.602 \times 10^{-19} \text{J}}\right) = 0.6829 \text{ eV}$$
+
+Find frequency (Hz)
+$$ f = \frac{E}{h} $$
+$$ f = \frac{1.094 \times 10^{-19} \text{J}}{6.626 \times 10^{-34} \text{J s}} = 1.651 \times 10^{14} \text{ Hz} $$
+
+Find wavelength
+$$ \lambda = \frac{v}{f} $$
+$$ \lambda = \frac{3.00 \times 10^8 \frac{\text{m}}{\text{s}}}{1.651 \times 10^{14} \text{ Hz}} = 1.817 \times 10^{-6} \text{m} $$
 
 
 \end{document}  
