CW Fusion Chamber Shutdown (done)

--- a/practice.tex
+++ b/practice.tex
@@ -33,26 +33,23 @@ $$
 
 (4) d. From $ n = 4 $ to $ n = 1 $ \newline
 Find energy (eV) \newline 
-$$ E_p = E_4 - E_1 $$
-$$ E_n = \frac{\pi^2 \hbar^2}{2mL^2} n^2 $$
-$$ E_n = \frac{\left(\pi\hbar\right)^2}{2mL^2} n^2 $$
-$$ E_n = \frac{\left(\pi\frac{h}{2\pi}\right)^2}{2mL^2} n^2 $$
-$$ E_n = \frac{\left(\frac{h}{2}\right)^2}{2mL^2} n^2 $$
-$$ E_n = \frac{h^2}{8mL^2} n^2 $$
-$$ E_p = \frac{h^2}{8mL^2} 4^2 - \frac{h^2}{8mL^2} 1^2 $$
-$$ E_p = \frac{h^2}{8mL^2} \left(4^2 - 1^2\right)$$
-$$ E_p = \frac{h^2}{8mL^2} \left(15\right)$$
-$$ E_p = \frac{\left(6.626 \times 10^{-34} \text{J s}\right)^2}{8\left(1.67 \times 10^{-27} \text{kg}\right)\left(1.733 \times 10^{-11}\right)^2} \left(15\right)$$
-$$ E_p = 1.094 \times 10^{-19} \text{J} $$
-$$ E_p = 1.094 \times 10^{-19} \text{J}\left(\frac{1 \text{eV}}{1.602 \times 10^{-19} \text{J}}\right) = 0.6829 \text{ eV}$$
+$$ E_n = \left(n + \frac{1}{2}\right)\hbar\omega $$
+$$ E_n = \left(n + \frac{1}{2}\right)\left(\frac{h}{2\pi}\right)\left(2\pi f\right) $$
+$$ E_n = \left(n + \frac{1}{2}\right)hf$$
+$$ E_n = \left(n_a + \frac{1}{2}\right)hf - \left(n_b + \frac{1}{2}\right)hf$$
+$$ E_n = \left(n_a - n_b\right)hf$$
+$$ E_1 = 13.6 \text{ eV} $$
+$$ E_p = |E_f - E_i| $$
+$$ E_p = \left|\frac{-13.6 \text{eV}}{1^2} - \frac{-13.6 \text{eV}}{4^2}\right| = 12.75 \text{ eV}$$
+$$ E_p = 12.75 \text{ eV}\left(\frac{1.602 \times 10^{-19} \text{J}}{1 \text{eV}}\right) = 2.043 \times 10^{-18} \text{ J}$$
 
 Find frequency (Hz)
 $$ f = \frac{E}{h} $$
-$$ f = \frac{1.094 \times 10^{-19} \text{J}}{6.626 \times 10^{-34} \text{J s}} = 1.651 \times 10^{14} \text{ Hz} $$
+$$ f = \frac{2.043 \times 10^{-18} \text{ J}}{6.626 \times 10^{-34} \text{J s}} = 3.083 \times 10^{15} \text{ Hz} $$
 
 Find wavelength
 $$ \lambda = \frac{v}{f} $$
-$$ \lambda = \frac{3.00 \times 10^8 \frac{\text{m}}{\text{s}}}{1.651 \times 10^{14} \text{ Hz}} = 1.817 \times 10^{-6} \text{m} $$
+$$ \lambda = \frac{3.00 \times 10^8 \frac{\text{m}}{\text{s}}}{3.083 \times 10^{15} \text{ Hz}} = 9.732 \times 10^{-8} \text{m} $$
 
 
 \end{document}  
