--- a/practice.tex
+++ b/practice.tex
@@ -13,61 +13,44 @@
 \begin{document}
 \maketitle
 
-(31) a. Normalization
-$$
-\psi(x) = A\cos\alpha x, -\frac{\pi}{2\alpha} \le x \le \frac{\pi}{2\alpha}
-$$
+(74) Probability at diff K \newline
+$ m = 6.64 \times 10^{-27} \text{ kg} $ \newline
+$ L = 2.0 \times 10^{-15} \text{ m} $ \newline
+$ U_0 = 30.0 \times 10^6 \text{ eV} \times \frac{1.602 \times 10^{-19} \text{ J}}{1 \text{ eV}} = 4.806 \times 10^{-12} \text{ J}$ \newline
+
+$
+\beta = \sqrt{\frac{2m\left(U_0 - E\right)}{\hbar^2}}
+$ \newline
+
+$
+k = \sqrt{\frac{2mE}{\hbar^2}}
+$ \newline
+
+$
+\gamma = \frac{\beta}{k} - \frac{k}{\beta}
+$ \newline
+
+$
+P = \frac{1}{\cosh^2\left(\beta L\right) + \left(\frac{\gamma}{2}\right)^2\sinh^2\left(\beta L\right)}
+$ \newline
+
+When $ K = 29.0 \text{ MeV} $ \newline
+$ E = 29.0 \times 10^6 \text{ eV} \times \frac{1.602 \times 10^{-19} \text{ J}}{1 \text{ eV}} = 4.646 \times 10^{-12} \text{ J}$ \newline
 
 $$
-\int_{a}^{b} \left|\psi(x)\right|^2 dx = 1
+\beta = \sqrt{\frac{2\left(6.64 \times 10^{-27} \text{ kg}\right)\left(4.806 \times 10^{-12} \text{ J} - 4.646 \times 10^{-12} \text{ J}\right)}{\left(\frac{6.626 \times 10^{-34} \text{J s}}{2\pi}\right)^2}}
+= 4.371 \times 10^{14}
 $$
 
-$$
-\int_{-\frac{\pi}{2\alpha}}^{\frac{\pi}{2\alpha}} \left|A\cos\alpha x\right|^2 dx = 1
-$$
+When $ K = 20.0 \text{ MeV} $ \newline
+$ E = 20.0 \times 10^6 \text{ eV} \times \frac{1.602 \times 10^{-19} \text{ J}}{1 \text{ eV}} = 3.204 \times 10^{-12} \text{ J}$ \newline
 
-$$
-A^2 \int_{-\frac{\pi}{2\alpha}}^{\frac{\pi}{2\alpha}} \cos^2\alpha x dx= 1
-$$
-
-$$
-\frac{A^2}{\alpha}\left[\frac{u}{2} + \frac{\sin2u}{4}\right]_{\mathbf{0}}^{\mathbf{0.5 \times 10^{-10} \text{m}}}
-$$
-
-$$
-\frac{\left(\sqrt{\frac{2\alpha}{\pi}}\right)^2}{\alpha}\left[\frac{u}{2} + \frac{\sin2u}{4}\right]_{\mathbf{0}}^{\mathbf{0.5 \times 10^{-10} \text{m}}}
-$$
-
-$$
-\frac{\left(\frac{2\alpha}{\pi}\right)}{\alpha}\left[\frac{u}{2} + \frac{\sin2u}{4}\right]_{\mathbf{0}}^{\mathbf{0.5 \times 10^{-10} \text{m}}}
-$$
-
-$$
-\frac{2}{\pi}\left[\left(\frac{0.5 \times 10^{-10} \text{m}}{2} + \frac{\sin\left(2\left(0.5 \times 10^{-10} \text{m}\right)\right)}{4}\right) -
-\left(\frac{0}{2} + \frac{\sin\left(2\left(0\right)\right)}{4}\right)\right]_{\mathbf{0}}^{\mathbf{0.5 \times 10^{-10} \text{m}}}
-$$
-
-$$
-\frac{2}{\pi}\left(\frac{0.5 \times 10^{-10} \text{m}}{2} + \frac{\sin\left(2\left(0.5 \times 10^{-10} \text{m}\right)\right)}{4}\right)
-$$
-
-(62) \newline
-$ k = 1.13 \times 10^3 \frac{\text{N}}{\text{m}} $ \newline
-$ m = 1.67 \times 10^{-27} \text{ kg} $ \newline
-
-a. Find f
-$$ w = \sqrt{\frac{k}{m}} = 2\pi f $$
-$$ f = \frac{\sqrt{\frac{k}{m}}}{2\pi} $$
-$$ f = \frac{\sqrt{\frac{\left(1.13 \times 10^3 \frac{\text{N}}{\text{m}}\right)}{\left(1.67 \times 10^{-27} \text{ kg} \div 2\right)}}}{2\pi} $$
-$$ f = 1.851 \times 10^{14} \text{ Hz}$$
-
-b. Find $E$ and $\lambda$
-$$ \Delta E_{43} = hf $$
-$$ \Delta E_{43} = \left(6.626 \times 10^{-34} \text{ Js}\right) \left(1.851 \times 10^{14} \text{ Hz}\right)$$
-$$ \Delta E_{43} = 1.227 \times 10^{-19} \text{ J}$$
-
-$$ \lambda = \frac{v}{f} $$
-$$ \lambda = \frac{3.00 \times 10^8 \frac{\text{m}}{\text{s}}}{1.851 \times 10^{14} \text{ Hz}} $$
-$$ \lambda = 1.621 \times 10^{-6} \text{ m} $$
+% 1. Beta
+% 2. k
+% 3. gamma
+% Beta L
+% cosh^2
+% sinh^2
+% P
 
 \end{document}  
