CW Happy Birthday, Darling! (done)

--- a/practice.tex
+++ b/practice.tex
@@ -13,37 +13,29 @@
 \begin{document}
 \maketitle
 
-(74) Probability at diff K \newline
-$ m = 6.64 \times 10^{-27} \text{ kg} $ \newline
-$ L = 2.0 \times 10^{-15} \text{ m} $ \newline
-$ U_0 = 30.0 \times 10^6 \text{ eV} \times \frac{1.602 \times 10^{-19} \text{ J}}{1 \text{ eV}} = 4.806 \times 10^{-12} \text{ J}$ \newline
-
-$
-\beta = \sqrt{\frac{2m\left(U_0 - E\right)}{\hbar^2}}
-$ \newline
-
-$
-k = \sqrt{\frac{2mE}{\hbar^2}}
-$ \newline
-
-$
-\gamma = \frac{\beta}{k} - \frac{k}{\beta}
-$ \newline
-
-$
-P = \frac{1}{\cosh^2\left(\beta L\right) + \left(\frac{\gamma}{2}\right)^2\sinh^2\left(\beta L\right)}
-$ \newline
-
-When $ K = 29.0 \text{ MeV} $ \newline
-$ E = 29.0 \times 10^6 \text{ eV} \times \frac{1.602 \times 10^{-19} \text{ J}}{1 \text{ eV}} = 4.646 \times 10^{-12} \text{ J}$ \newline
-
 $$
-\beta = \sqrt{\frac{2\left(6.64 \times 10^{-27} \text{ kg}\right)\left(4.806 \times 10^{-12} \text{ J} - 4.646 \times 10^{-12} \text{ J}\right)}{\left(\frac{6.626 \times 10^{-34} \text{J s}}{2\pi}\right)^2}}
-= 4.371 \times 10^{14}
+2x + 7 - x = 4x + 2b - 3x - 3b
 $$
 
-When $ K = 20.0 \text{ MeV} $ \newline
-$ E = 20.0 \times 10^6 \text{ eV} \times \frac{1.602 \times 10^{-19} \text{ J}}{1 \text{ eV}} = 3.204 \times 10^{-12} \text{ J}$ \newline
+$$
+\text{Let } x \text{ be } 1
+$$
+
+$$
+\left(2(1) + 7 - 1\right) - 3 = 4(1) + 2b - 3(1) - 3b
+$$
+
+$$
+\left(2 + 7 - 1\right) - 3 = 4 - b - 3
+$$
+
+$$
+5 = 1 - b
+$$
+
+$$
+b = -4
+$$
 
 % 1. Beta
 % 2. k
