1 on final review TeX

--- a/practice.tex
+++ b/practice.tex
@@ -13,36 +13,75 @@
 \begin{document}
 \maketitle
 
-$$
-2x + 7 - x = 4x + 2b - 3x - 3b
-$$
+(1) \newline
+$ m_{O_2} = 0.105 \text{ kg} $ \newline
+$ m_p = 75.0 \text{ kg} $ \newline
+$ r = 0.0550 \text{ m} $ \newline
+$ T_{O_2} = 200.0 \text{ °C} = 473.0 \text{ K}$ \newline
+$ \text{O}_2 = 32.0 \text{ AMU} $ \newline
+$ 1 \text{ AMU} = 1.66 \times 10^{-27} \text{ kg} $ \newline
+$ 1 \text{ mol} = 6.022 \times 10^{23} \text{ particles} $ \newline
+$ k_{\text{B}} = 1.38 \times 10^{-23} \frac{J}{K} $ \newline
 
-$$
-\text{Let } x \text{ be } 1
-$$
+a. Moles of O$_2$ \newline
+$ \frac{0.105 \text{ kg}}{32.0 \times
+\left(1.66 \times 10^{-27} \text{ kg}\right)} 
+= 1.977 \times 10^{24} \text{ particles}
+$ \newline
+$
+1.977 \times 10^{24} \text{ particles}
+\times \frac{1 \text{ mol}}{6.022 \times 10^{23} \text{ particles}}
+= 3.282 \text{ mol}
+$ \newline
 
-$$
-\left(2(1) + 7 - 1\right) - 3 = 4(1) + 2b - 3(1) - 3b
-$$
+b. Find pressure \newline
+$
+P = \frac{F}{A} = \frac{mg}{\pi r^2}
+= \frac{\left(75.0 \text{ kg}\right)\left(9.80 \frac{\text{m}}{\text{s}^2}\right)}{\pi \left(0.0550 \text{ m}\right)^2}
+= 77341 \text{ Pa}
+$ \newline
+$
+P_{\text{final}} = \left(77341 + 1.013 \times 10^5\right) \text{ Pa}
+$ \newline
+$
+P_{\text{final}} = 178641 \text{ Pa}
+$ \newline
 
-$$
-\left(2 + 7 - 1\right) - 3 = 4 - b - 3
-$$
+c. Find volume \newline
+$
+PV = nRT; V = \frac{nRT}{P}
+$ \newline
+$
+V = \frac{3.282 \text{ mol} \times 8.314 \frac{\text{J}}{\text{K mol}} \times 473.0 \text{ K}}{178641 \text{ Pa}}
+= 0.07225 \text{ m}^3
+$ \newline
 
-$$
-5 = 1 - b
-$$
+d. Find height \newline
+$
+V = \pi r^2 h; h = \frac{V}{\pi r^2}
+$ \newline
+$
+h = \frac{0.07225 \text{ m}^3}{\pi \left(0.0550 \text{ m}\right)^2}
+= 7.603 \text{ m}
+$ \newline
 
-$$
-b = -4
-$$
+e. Find $ K_{\text{avg}} $ \newline
+$
+K_{\text{avg}} = \frac{3}{2} k_{\text{B}} T
+= \frac{3}{2} \times 1.38 \times 10^{-23} \frac{J}{K} 
+\times 473.0 \text{ K}
+$ \newline
+$
+K_{\text{avg}} = 9.791 \times 10^{-21} \text{ J}
+$ \newline
 
-% 1. Beta
-% 2. k
-% 3. gamma
-% Beta L
-% cosh^2
-% sinh^2
-% P
+f. Find $ v_{\text{RMS}}$ \newline
+$
+v_{\text{RMS}} = \sqrt{\frac{3 k_{\text{B}} T}{m}}
+= \sqrt{\frac{3 \times 1.38 \times 10^{-23} \frac{J}{K} \times 473.0 \text{ K}}{32.0 \times 1.66 \times 10^{-27} \text{ kg}}}
+$ \newline
+$
+v_{\text{RMS}} = 607.2 \frac{\text{m}}{\text{s}} 
+$ \newline
 
 \end{document}  
