--- a/practice.tex
+++ b/practice.tex
@@ -13,75 +13,96 @@
 \begin{document}
 \maketitle
 
-(1) \newline
-$ m_{O_2} = 0.105 \text{ kg} $ \newline
-$ m_p = 75.0 \text{ kg} $ \newline
-$ r = 0.0550 \text{ m} $ \newline
-$ T_{O_2} = 200.0 \text{ °C} = 473.0 \text{ K}$ \newline
-$ \text{O}_2 = 32.0 \text{ AMU} $ \newline
-$ 1 \text{ AMU} = 1.66 \times 10^{-27} \text{ kg} $ \newline
-$ 1 \text{ mol} = 6.022 \times 10^{23} \text{ particles} $ \newline
-$ k_{\text{B}} = 1.38 \times 10^{-23} \frac{J}{K} $ \newline
+(3) Isobaric Process \newline
+$ n = 0.475 \text{ mol} $ \newline
+$ T_i = 575 \text{ K} $ \newline
+$ T_f = 1150 \text{ K} $ \newline
+$ f_{\le 1150 \text{ K}} = 5 $ \newline
+$ f_{> 1150 \text{ K}} = 7 $ \newline
 
-a. Moles of O$_2$ \newline
-$ \frac{0.105 \text{ kg}}{32.0 \times
-\left(1.66 \times 10^{-27} \text{ kg}\right)} 
-= 1.977 \times 10^{24} \text{ particles}
+a. Total Q \newline
+$
+Q = n C_p \Delta T
 $ \newline
 $
-1.977 \times 10^{24} \text{ particles}
-\times \frac{1 \text{ mol}}{6.022 \times 10^{23} \text{ particles}}
-= 3.282 \text{ mol}
+C_p = \left(\frac{f}{2} + 1\right)R
 $ \newline
 
-b. Find pressure \newline
+From $ 575 $ K to $ 1150 $ K \newline
 $
-P = \frac{F}{A} = \frac{mg}{\pi r^2}
-= \frac{\left(75.0 \text{ kg}\right)\left(9.80 \frac{\text{m}}{\text{s}^2}\right)}{\pi \left(0.0550 \text{ m}\right)^2}
-= 77341 \text{ Pa}
+C_p = \left(\frac{5}{2} + 1\right)R = \frac{7}{2}R
+= \frac{7}{2} 8.314 \frac{\text{J}}{\text{K mol}}
+= 29.1 \frac{\text{J}}{\text{K mol}}
 $ \newline
 $
-P_{\text{final}} = \left(77341 + 1.013 \times 10^5\right) \text{ Pa}
-$ \newline
-$
-P_{\text{final}} = 178641 \text{ Pa}
-$ \newline
-
-c. Find volume \newline
-$
-PV = nRT; V = \frac{nRT}{P}
-$ \newline
-$
-V = \frac{3.282 \text{ mol} \times 8.314 \frac{\text{J}}{\text{K mol}} \times 473.0 \text{ K}}{178641 \text{ Pa}}
-= 0.07225 \text{ m}^3
+Q = 0.475 \text{ mol} \times
+29.1 \frac{\text{J}}{\text{K mol}} \times
+\left(1150 \text{ K} - 575 \text{ K}\right)
+= 7948 \text{ J}
 $ \newline
 
-d. Find height \newline
+From $ 1151 $ K to $ 1575 $ K \newline
 $
-V = \pi r^2 h; h = \frac{V}{\pi r^2}
-$ \newline
+C_p = \left(\frac{7}{2} + 1\right)R = \frac{9}{2}R
+= \frac{9}{2} 8.314 \frac{\text{J}}{\text{K mol}}
+= 37.41 \frac{\text{J}}{\text{K mol}}
+$\newline
 $
-h = \frac{0.07225 \text{ m}^3}{\pi \left(0.0550 \text{ m}\right)^2}
-= 7.603 \text{ m}
-$ \newline
-
-e. Find $ K_{\text{avg}} $ \newline
-$
-K_{\text{avg}} = \frac{3}{2} k_{\text{B}} T
-= \frac{3}{2} \times 1.38 \times 10^{-23} \frac{J}{K} 
-\times 473.0 \text{ K}
-$ \newline
-$
-K_{\text{avg}} = 9.791 \times 10^{-21} \text{ J}
+Q = 0.475 \text{ mol} \times
+37.41 \frac{\text{J}}{\text{K mol}} \times
+\left(1575 \text{ K} - 1151 \text{ K}\right)
+= 7534 \text{ J}
 $ \newline
 
-f. Find $ v_{\text{RMS}}$ \newline
 $
-v_{\text{RMS}} = \sqrt{\frac{3 k_{\text{B}} T}{m}}
-= \sqrt{\frac{3 \times 1.38 \times 10^{-23} \frac{J}{K} \times 473.0 \text{ K}}{32.0 \times 1.66 \times 10^{-27} \text{ kg}}}
-$ \newline
-$
-v_{\text{RMS}} = 607.2 \frac{\text{m}}{\text{s}} 
+Q_{tot} = \left(7948 + 7534\right) \text{ J}
+= 15482 \text{ J}
 $ \newline
 
+b. Total $ W $ \newline
+$
+W = Q - \Delta E_{int}
+$ \newline
+$
+W_{tot} = \left(15482 - 11539\right) \text{ J}
+= 3943 \text{ J}
+$ \newline
+
+c. Total $ \Delta E_{int} $ \newline
+$
+\Delta E_{int} = n C_v \Delta T
+$ \newline
+$
+C_v = \frac{f}{2}R
+$ \newline
+
+From $ 575 $ K to $ 1150 $ K \newline
+$
+C_v = \frac{5}{2}R 
+= \frac{5}{2} 8.314 \frac{\text{J}}{\text{K mol}}
+= 20.79 \frac{\text{J}}{\text{K mol}}
+$ \newline
+$
+\Delta E_{int} = 0.475 \text{ mol} \times
+20.79 \frac{\text{J}}{\text{K mol}} \times
+\left(1150 \text{ K} - 575 \text{ K}\right)
+= 5678 \text{ J}
+$ \newline
+
+From $ 1151 $ K to $ 1575 $ K \newline
+$
+C_v = \frac{7}{2}R 
+= \frac{7}{2} 8.314 \frac{\text{J}}{\text{K mol}}
+= 29.1 \frac{\text{J}}{\text{K mol}}
+$ \newline
+$
+\Delta E_{int} = 0.475 \text{ mol} \times
+29.1 \frac{\text{J}}{\text{K mol}} \times
+\left(1575 \text{ K} - 1151 \text{ K}\right)
+= 5861 \text{ J}
+$ \newline
+$
+\Delta E_{int tot} = \left(5678 + 5861\right) \text{ J}
+= 11539 \text{ J}
+$ \newline
 \end{document}  
