CW Which section did you scroll to? (done)

--- a/practice.tex
+++ b/practice.tex
@@ -16,30 +16,9 @@
 
 \begin{document}
 \maketitle
-$ f = 465 \text{ Hz} $ \newline
-$ v_{snd} = 343.0 \frac{\text{m}}{\text{s}} $ \newline
 
-$
-\lambda = \frac{v}{f}
-= \frac{343.0 \frac{\text{m}}{\text{s}}}
-  {465 \text{ Hz}}
-= 0.7376 \text{ m}
-$ \newline
-
-$
-\Delta\theta = \frac{2\pi}{\lambda} \Delta x
-= 2(a)\pi
-$ \newline
-
-$
-\frac{\Delta x}{\lambda}
-= a
-$ \newline
-
-$
-\frac{4 \text{ m}}{0.7376 \text{ m}}
-= 5.423
-$ \newline
+(14)
+$ t = 0.135 \text{ m} $ \newline
 
 
 \end{document}  
