--- a/practice.tex
+++ b/practice.tex
@@ -17,8 +17,62 @@
 \begin{document}
 \maketitle
 
-(14)
-$ t = 0.135 \text{ m} $ \newline
+(27) \newline
+$ \lambda = 589 \times 10^{-9} \text{ m} $ \newline
+$ t = 1.60 \times 10^{-8} \text{ s} $ \newline
+$ m = 9.11 \times 10^{-31} \text{ kg} $ \newline
+
+a. Find the $\Delta E$ \newline
+$
+\Delta E \Delta t \geq \frac{\hbar}{2} \text{ ; }
+\frac{h}{4\pi}
+$ \newline
+$
+\Delta E \geq \frac{h}{4\pi \Delta t} \text{ ; }
+\frac{6.626 \times 10^{-34} \text{ J s}}
+{4\pi \times 1.60 \times 10^{-8} \text{ s}}
+= 3.296 \times 10^{-27} \text{ J}
+\left(
+  \frac{1 \text{ eV}}{1.602 \times 10^{-19} \text{ J}}
+\right) 
+$ \newline
+$
+\Delta E \geq 2.057 \times 10^{-8} \text{ eV}
+$ \newline
+
+b. Find $f$ \newline
+$ 
+f = \frac{v}{\lambda}
+= \frac{3.00 \times 10^8 \frac{\text{m}}{\text{s}}}
+  {589 \times 10^{-9} \text{ m}}
+= 5.093 \times 10^{14} \text{ Hz}
+$ \newline
+
+c. Find $\Delta f$ \newline
+$
+\Delta E = h\Delta f \text{ ; }
+\Delta f = \frac{\Delta E}{h}
+= \frac{3.296 \times 10^{-27} \text{ J}}
+  {6.626 \times 10^{-34} \text{ J s}}
+= 4.974 \times 10^6 \text{ Hz}
+$ \newline
+$
+\% = \frac{4.974 \times 10^6 \text{ Hz}}
+  {5.093 \times 10^{14} \text{ Hz}} \times 100
+= 9.766 \times 10^{-7} \%
+$ \newline
+
+Math problems from AoPS: Intro to Algebra \newline
+\textbf{4.25} Expand the following: \newline
+(a) $2\left(a + b - 3c - 5\right)$ \newline
+$ 2a + 2b - 6c - 10 $ \newline
+
+(b) $2x^2y\left(
+  x^3y + \frac{4}{xy}
+\right)$ \newline
+$
+2x^5y^2 + 8x
+$ \newline
 
 
 \end{document}  
