--- a/practice.tex
+++ b/practice.tex
@@ -63,16 +63,17 @@ $
 $ \newline
 
 Math problems from AoPS: Intro to Algebra \newline
-\textbf{4.25} Expand the following: \newline
-(a) $2\left(a + b - 3c - 5\right)$ \newline
-$ 2a + 2b - 6c - 10 $ \newline
+\textbf{4.27} Simplify the following: \newline
 
-(b) $2x^2y\left(
-  x^3y + \frac{4}{xy}
-\right)$ \newline
-$
-2x^5y^2 + 8x
-$ \newline
+(a) $-3w - 2x + 5 - \left(2w - 3x - 4\right)$ \newline
+$-3w - 2x + 5 - 2w + 3x + 4$ \newline
+$-5w + x + 9$ \newline
+
+
+(b)$2\left(r^2 - 3s\right) - 
+  3\left(2r^2 + 2r - s\right)$ \newline
+$ 2r^2 - 6s - 6r^2 - 6r + 3s $ \newline
+$ -4r^2 - 6r - 3s $ \newline
 
 
 \end{document}  
