--- a/practice.tex
+++ b/practice.tex
@@ -63,17 +63,30 @@ $
 $ \newline
 
 Math problems from AoPS: Intro to Algebra \newline
-\textbf{4.27} Simplify the following: \newline
+\textbf{4.29} Factor the following: \newline
 
-(a) $-3w - 2x + 5 - \left(2w - 3x - 4\right)$ \newline
-$-3w - 2x + 5 - 2w + 3x + 4$ \newline
-$-5w + x + 9$ \newline
+(a) $7x - 35y^2$ \newline
+$
+7\left(x - 5y^2\right)
+$ \newline
 
+(b) $21ab^2 - 24a$ \newline
+$
+3a\left(7b^2 - 8\right)
+$ \newline
 
-(b)$2\left(r^2 - 3s\right) - 
-  3\left(2r^2 + 2r - s\right)$ \newline
-$ 2r^2 - 6s - 6r^2 - 6r + 3s $ \newline
-$ -4r^2 - 6r - 3s $ \newline
+(c) $-20x^3 - 13x^2yz$ \newline
+$
+-x^2\left(20x + 13yz\right)
+$ \newline
+
+(d) $12rst^2 + 24r^2st - 18rs^2t$ \newline
+$
+6rst\left(2t + 4r - 3s\right)
+$ \newline
+$
+6rst\left(4r - 3s + 2t\right)
+$ \newline
 
 
 \end{document}  
