--- a/practice.tex
+++ b/practice.tex
@@ -63,29 +63,17 @@ $
 $ \newline
 
 Math problems from AoPS: Intro to Algebra \newline
-\textbf{4.29} Factor the following: \newline
-
-(a) $7x - 35y^2$ \newline
+\textbf{4.31} Express 
+$\frac{3x}{14y^2z^4} - 
+\frac{5y}{18x^3z^2}$ as a single fraction. \newline
 $
-7\left(x - 5y^2\right)
-$ \newline
-
-(b) $21ab^2 - 24a$ \newline
-$
-3a\left(7b^2 - 8\right)
-$ \newline
-
-(c) $-20x^3 - 13x^2yz$ \newline
-$
--x^2\left(20x + 13yz\right)
-$ \newline
-
-(d) $12rst^2 + 24r^2st - 18rs^2t$ \newline
-$
-6rst\left(2t + 4r - 3s\right)
+\frac{9x^3}{9x^3} \frac{3x}{14y^2z^4} - 
+\frac{7y^2z^2}{7y^2z^2} \frac{5y}{18x^3z^2}
 $ \newline
 $
-6rst\left(4r - 3s + 2t\right)
+\frac{9x^3\left(3x\right)-7y^2z^2\left(5y\right)}
+{126x^3y^2z^4}
+= \frac{27x^4 - 35y^3z^2}{126x^3y^2z^4}
 $ \newline
 
 
