CW Simple directions reversal (done)

--- a/practice.tex
+++ b/practice.tex
@@ -17,30 +17,13 @@
 \begin{document}
 \maketitle
 
-Quiz Practice \newline
-Calculate probabilites and expectation values. \newline
+Que) \newline
+$m_w = 0.045  \text{ kg}$ \newline
+$T_w = 298 \text{ K}$ \newline
+$m_a = 0.750  \text{ kg}$ \newline
+$C_a = 900.0 \frac{\text{J}}{\text{kg K}}$ \newline
+$C_w = 4186 \frac{\text{J}}{\text{kg K}}$ \newline
+$L_{vw} = 2.26 \times 10^6 \frac{\text{J}}{\text{kg}}$ \newline
 
-$
-\psi_n(x) = \sqrt{\frac{2}{L}}
-\sin\left(\frac{n\pi x}{L}\right)
-$ \newline
 
-Find probability $n=2$,
-from $x=\frac{L}{2}$ to $x=\frac{L}{4}$ \newline
-$
-\int \left|\psi(x)\right|^2 dx
-$ \newline
-$
-\int \left|
-    \sqrt{\frac{2}{L}}
-    \sin\left(\frac{n\pi x}{L}\right)
-  \right|^2 dx
-$ \newline
-$
-\frac{2}{L}\int 
-  \sin^2\left(\frac{n\pi x}{L}\right) dx \text{ ; }
-u = \frac{n\pi x}{L} \text{ ; }
-dx = \frac{du}{\frac{n\pi}{L}}
-  = \frac{Ldu}{n\pi}
-$ \newline
 \end{document}  
