--- a/practice.tex
+++ b/practice.tex
@@ -25,5 +25,45 @@ $C_a = 900.0 \frac{\text{J}}{\text{kg K}}$ \newline
 $C_w = 4186 \frac{\text{J}}{\text{kg K}}$ \newline
 $L_{vw} = 2.26 \times 10^6 \frac{\text{J}}{\text{kg}}$ \newline
 
+$
+\frac{2.26\times 10^6 \text{ J}}
+  {1 \text{ kg}}
+= \frac{x}
+  {0.045  \text{ kg}}
+$ \newline
+$
+x = 0.045  \text{ kg}\times\frac{2.26\times 10^6 \text{ J}}
+  {1 \text{ kg}}
+= 101700 \text{ J}
+$ \newline
+$
+Q = mC\Delta T \text{ ; }
+Q = mL_{vw}
+$ \newline
+$
+Q_{al} = Q_w + Q_{Lvw}
+$ \newline
+$
+m_aC_a\Delta T = m_wC_w\Delta T + 
+  m_wL_{vw}
+$ \newline
+$
+0.750  \text{ kg} 900.0 \frac{\text{J}}{\text{kg K}}\Delta T = 0.045  \text{ kg} 4186 \frac{\text{J}}{\text{kg K}}
+    \left(100 \text{ °C} - 25.0 \text{ °C}\right) + 
+  0.045  \text{ kg} 2.26 \times 10^6 \frac{\text{J}}{\text{kg}}
+$ \newline
+$
+\left(100 \text{ °C} - T_i\right) = \frac{0.045  \text{ kg} 4186 \frac{\text{J}}{\text{kg K}}75.0 \text{ K} + 
+  0.045  \text{ kg} 2.26 \times 10^6 \frac{\text{J}}{\text{kg}}}
+  {0.750  \text{ kg} 900.0 \frac{\text{J}}{\text{kg K}}}
+$ \newline
+$
+T_i = -\frac{0.045  \text{ kg} 4186 \frac{\text{J}}{\text{kg K}}75.0 \text{ K} + 
+  0.045  \text{ kg} 2.26 \times 10^6 \frac{\text{J}}{\text{kg}}}
+  {0.750  \text{ kg} 900.0 \frac{\text{J}}{\text{kg K}}} +
+  100 \text{ °C}
+= 271.6 \text{ °C}
+$ \newline
+
 
 \end{document}  
