CW Simple string division II (done)

--- a/practice.tex
+++ b/practice.tex
@@ -17,53 +17,13 @@
 \begin{document}
 \maketitle
 
-Que) \newline
-$m_w = 0.045  \text{ kg}$ \newline
-$T_w = 298 \text{ K}$ \newline
-$m_a = 0.750  \text{ kg}$ \newline
-$C_a = 900.0 \frac{\text{J}}{\text{kg K}}$ \newline
-$C_w = 4186 \frac{\text{J}}{\text{kg K}}$ \newline
-$L_{vw} = 2.26 \times 10^6 \frac{\text{J}}{\text{kg}}$ \newline
-
+Que) Open-Closed End \newline
 $
-\frac{2.26\times 10^6 \text{ J}}
-  {1 \text{ kg}}
-= \frac{x}
-  {0.045  \text{ kg}}
+\lambda_n = \frac{4L}{n}
 $ \newline
 $
-x = 0.045  \text{ kg}\times\frac{2.26\times 10^6 \text{ J}}
-  {1 \text{ kg}}
-= 101700 \text{ J}
+\lambda_1 = \frac{4\times0.453 \text{ m}}{1}
+= 1.812 \text{ m}
 $ \newline
-$
-Q = mC\Delta T \text{ ; }
-Q = mL_{vw}
-$ \newline
-$
-Q_{al} = Q_w + Q_{Lvw}
-$ \newline
-$
-m_aC_a\Delta T = m_wC_w\Delta T + 
-  m_wL_{vw}
-$ \newline
-$
-0.750  \text{ kg} 900.0 \frac{\text{J}}{\text{kg K}}\Delta T = 0.045  \text{ kg} 4186 \frac{\text{J}}{\text{kg K}}
-    \left(100 \text{ °C} - 25.0 \text{ °C}\right) + 
-  0.045  \text{ kg} 2.26 \times 10^6 \frac{\text{J}}{\text{kg}}
-$ \newline
-$
-\left(100 \text{ °C} - T_i\right) = \frac{0.045  \text{ kg} 4186 \frac{\text{J}}{\text{kg K}}75.0 \text{ K} + 
-  0.045  \text{ kg} 2.26 \times 10^6 \frac{\text{J}}{\text{kg}}}
-  {0.750  \text{ kg} 900.0 \frac{\text{J}}{\text{kg K}}}
-$ \newline
-$
-T_i = -\frac{0.045  \text{ kg} 4186 \frac{\text{J}}{\text{kg K}}75.0 \text{ K} + 
-  0.045  \text{ kg} 2.26 \times 10^6 \frac{\text{J}}{\text{kg}}}
-  {0.750  \text{ kg} 900.0 \frac{\text{J}}{\text{kg K}}} +
-  100 \text{ °C}
-= 271.6 \text{ °C}
-$ \newline
-
 
 \end{document}  
