--- a/practice.tex
+++ b/practice.tex
@@ -17,13 +17,38 @@
 \begin{document}
 \maketitle
 
-Que) Open-Closed End \newline
+Que) Work \newline
+
+A $\to$ B \newline
 $
-\lambda_n = \frac{4L}{n}
+W = P_i\Delta V
+= 5.40\times 10^5 \text{ Pa} \times
+\left(0.451 - 0.272\right) \text{ m}^3
+= 96660 \text{ J}
 $ \newline
+
+B $\to$ C \newline
 $
-\lambda_1 = \frac{4\times0.453 \text{ m}}{1}
-= 1.812 \text{ m}
+W = \frac{P_i V_i - P_f V_f}{\gamma - 1}
+= \frac{5.40\times 10^5 \text{ Pa} 0.451\text{ m}^3 - 
+  1.55\times 10^5 \text{ Pa} 0.950\text{ m}^3}
+  {1 + \frac{2}{3} - 1}
+= 144435 \text{ J}
+$ \newline
+
+C $\to$ A \newline
+$
+W = P_i V_i \ln\left(\frac{V_f}{V_i}\right)
+= 1.55\times 10^5 \text{ Pa} 0.950\text{ m}^3
+  \ln\left(\frac{0.272\text{ m}^3}{0.950\text{ m}^3}\right)
+= -184160 \text{ J}
+$ \newline
+
+$W_{net}$ \newline
+$
+W_{net} = \left(96660 + 144435 - 184160\right)
+  \text{ J}
+= 56935 \text{ J}
 $ \newline
 
 \end{document}  
