CW Redacted! (done)

--- a/practice.tex
+++ b/practice.tex
@@ -17,38 +17,33 @@
 \begin{document}
 \maketitle
 
-Que) Work \newline
-
-A $\to$ B \newline
+Math AoPS \newline
+$2x - 3y = -5$ \newline
+$5x - 2y = 4$ \newline
+$-5x + 2y = -4$ \newline
+$3x + y = 9$ \newline
+$y = -3x + 9$ \newline
 $
-W = P_i\Delta V
-= 5.40\times 10^5 \text{ Pa} \times
-\left(0.451 - 0.272\right) \text{ m}^3
-= 96660 \text{ J}
+2x - 3\left(
+  -3x + 9
+\right) = -5
+$ \newline
+$
+2x + 9x - 27 = -5 \text{ ; }
+11x = 22
+$ \newline
+$
+x = 2
+$ \newline
+$
+y = -3\left(2\right) + 9
+= -6 + 9 = 3
+$\newline
+$
+\left(2\text{, }3\right)
 $ \newline
 
-B $\to$ C \newline
-$
-W = \frac{P_i V_i - P_f V_f}{\gamma - 1}
-= \frac{5.40\times 10^5 \text{ Pa} 0.451\text{ m}^3 - 
-  1.55\times 10^5 \text{ Pa} 0.950\text{ m}^3}
-  {1 + \frac{2}{3} - 1}
-= 144435 \text{ J}
-$ \newline
 
-C $\to$ A \newline
-$
-W = P_i V_i \ln\left(\frac{V_f}{V_i}\right)
-= 1.55\times 10^5 \text{ Pa} 0.950\text{ m}^3
-  \ln\left(\frac{0.272\text{ m}^3}{0.950\text{ m}^3}\right)
-= -184160 \text{ J}
-$ \newline
 
-$W_{net}$ \newline
-$
-W_{net} = \left(96660 + 144435 - 184160\right)
-  \text{ J}
-= 56935 \text{ J}
-$ \newline
 
 \end{document}  
