CW Offload your work! (done)

--- a/practice.tex
+++ b/practice.tex
@@ -18,32 +18,22 @@
 \maketitle
 
 Math AoPS \newline
-$2x - 3y = -5$ \newline
-$5x - 2y = 4$ \newline
-$-5x + 2y = -4$ \newline
-$3x + y = 9$ \newline
-$y = -3x + 9$ \newline
-$
-2x - 3\left(
-  -3x + 9
-\right) = -5
-$ \newline
-$
-2x + 9x - 27 = -5 \text{ ; }
-11x = 22
-$ \newline
-$
-x = 2
-$ \newline
-$
-y = -3\left(2\right) + 9
-= -6 + 9 = 3
-$\newline
-$
-\left(2\text{, }3\right)
-$ \newline
+$5u = -7 - 2v$ \newline
+$3u = 4v - 25$ \newline
 
+$10u = -14 - 4v$ \newline
+$10u = -4v -14$ \newline
 
+$13u = -39$ \newline
+$u = -3$ \newline
 
+$4v = 3u + 25$ \newline
+$
+v = \frac{3u + 25}{4}
+= \frac{3\left(-3\right) + 25}{4}
+= \frac{-9 + 25}{4}
+= \frac{16}{4}
+= 4
+$ \newline
 
 \end{document}  
