CW Rock Off! (done)

--- a/practice.tex
+++ b/practice.tex
@@ -18,22 +18,14 @@
 \maketitle
 
 Math AoPS \newline
-$5u = -7 - 2v$ \newline
-$3u = 4v - 25$ \newline
-
-$10u = -14 - 4v$ \newline
-$10u = -4v -14$ \newline
-
-$13u = -39$ \newline
-$u = -3$ \newline
-
-$4v = 3u + 25$ \newline
 $
-v = \frac{3u + 25}{4}
-= \frac{3\left(-3\right) + 25}{4}
-= \frac{-9 + 25}{4}
-= \frac{16}{4}
-= 4
+T_1 = 2\times 60 + a
+$ \newline
+$
+T_1 + 15 = 3\times 60 + b
+$ \newline
+$
+a = 6b
 $ \newline
 
 \end{document}  
