CS Multiplying Large Numbers Represented as Strings (done)

--- a/practice.tex
+++ b/practice.tex
@@ -18,6 +18,36 @@
 \maketitle
 
 Math AoPS \newline
-
+$
+\frac{x}{y} - 3 = \frac{2}{y}
+$ \newline
+$
+\frac{x}{y} - \frac{3y}{y} = \frac{2}{y}
+$ \newline
+$
+x - 3y = 2 \text{ ; }
+x = 3y + 2
+$ \newline
+$
+2x - 9y = -8
+$ \newline
+$
+2\left(3y + 2\right) - 9y = -8
+$ \newline
+$
+6y + 4 - 9y = -8
+$ \newline
+$
+-3y = -12 \text{ ; }
+y = 4
+$ \newline
+$
+x = 3\left(4\right) + 2
+= 12 + 2
+= 14
+$ \newline
+$
+\left(14 \text{, } 4\right)
+$ \newline
 
 \end{document}  
