--- a/practice.tex
+++ b/practice.tex
@@ -19,35 +19,19 @@
 
 Math AoPS \newline
 $
-\frac{x}{y} - 3 = \frac{2}{y}
+x = 3 - 4t \text{ ; }
+x + 0y + 4t = 3
 $ \newline
 $
-\frac{x}{y} - \frac{3y}{y} = \frac{2}{y}
+y = 5 + 2t \text{ ; }
+0x + y - 2t = 5 \text{ ; }
+0x + 2y - 4t = 10
 $ \newline
 $
-x - 3y = 2 \text{ ; }
-x = 3y + 2
+x + 2y = 13
 $ \newline
 $
-2x - 9y = -8
-$ \newline
-$
-2\left(3y + 2\right) - 9y = -8
-$ \newline
-$
-6y + 4 - 9y = -8
-$ \newline
-$
--3y = -12 \text{ ; }
-y = 4
-$ \newline
-$
-x = 3\left(4\right) + 2
-= 12 + 2
-= 14
-$ \newline
-$
-\left(14 \text{, } 4\right)
+x = -2y + 13
 $ \newline
 
 \end{document}  
