CW Case-sensitive! (done)

--- a/practice.tex
+++ b/practice.tex
@@ -18,20 +18,27 @@
 \maketitle
 
 Math AoPS \newline
+5.35) \newline
 $
-x = 3 - 4t \text{ ; }
-x + 0y + 4t = 3
+ab = 2\left(a + b\right)
 $ \newline
 $
-y = 5 + 2t \text{ ; }
-0x + y - 2t = 5 \text{ ; }
-0x + 2y - 4t = 10
+a = \frac{2\left(a + b\right)}{b}
 $ \newline
 $
-x + 2y = 13
+b = \frac{2\left(a + b\right)}{a}
 $ \newline
 $
-x = -2y + 13
+\frac{1}{a} + \frac{1}{b}
+= \frac{1}{\frac{2\left(a + b\right)}{b}} +
+\frac{1}{\frac{2\left(a + b\right)}{a}}
+= \frac{b}{2\left(a + b\right)} +
+\frac{a}{2\left(a + b\right)}
+$ \newline
+$
+\frac{1}{a} + \frac{1}{b}
+= \frac{a + b}{2\left(a + b\right)}
+= \frac{1}{2}
 $ \newline
 
 \end{document}  
