--- a/practice.tex
+++ b/practice.tex
@@ -18,27 +18,66 @@
 \maketitle
 
 Math AoPS \newline
-5.35) \newline
+5.37) \newline
+Compute $\frac{x}{y}$ \newline
 $
-ab = 2\left(a + b\right)
+x + \frac{1}{y} = 4 \text{ ; }
+x = -\frac{1}{y} + 4
 $ \newline
 $
-a = \frac{2\left(a + b\right)}{b}
+y + \frac{1}{x} = \frac{1}{4} \text{ ; }
+y = -\frac{1}{x} + \frac{1}{4}
+$ \newline
+
+$
+y + \frac{1}{-\frac{1}{y} + 4} = \frac{1}{4}
 $ \newline
 $
-b = \frac{2\left(a + b\right)}{a}
+\frac{-\frac{1}{y} + 4}{-\frac{1}{y} + 4}
+\times y +
+\frac{1}{-\frac{1}{y} + 4} = \frac{1}{4}
 $ \newline
 $
-\frac{1}{a} + \frac{1}{b}
-= \frac{1}{\frac{2\left(a + b\right)}{b}} +
-\frac{1}{\frac{2\left(a + b\right)}{a}}
-= \frac{b}{2\left(a + b\right)} +
-\frac{a}{2\left(a + b\right)}
+\frac{-1 + 4y + 1}{-\frac{1}{y} + 4}
+= \frac{1}{4}
 $ \newline
 $
-\frac{1}{a} + \frac{1}{b}
-= \frac{a + b}{2\left(a + b\right)}
-= \frac{1}{2}
+\frac{4y}{-\frac{1}{y} + 4}
+= \frac{1}{4}
 $ \newline
+$
+\frac{16y}{-\frac{1}{y} + 4}
+= 1
+$ \newline
+$
+16y = -\frac{1}{y} + 4
+$ \newline
+$
+16y + \frac{1}{y} = 4
+$ \newline
+$
+\frac{16y^2}{y} + \frac{1}{y} = 4
+$ \newline
+$
+\frac{16y^2 + 1}{y} = 4
+$ \newline
+$
+16y^2 + 1 = 4y
+$ \newline
+$
+16y^2 - 4y + 1 = 0
+$ \newline
+$
+\frac{-b \pm \sqrt{b^2 - 4ac}}{2a}
+= \frac{4 \pm \sqrt{\left(-4\right)^2 - 4\times 16\times 1}}
+{2\times 16}
+$ \newline
+$
+\frac{4 \pm \sqrt{16 - 64}}
+{32}
+= \frac{4 \pm \sqrt{-48}}
+{32}
+$ \newline
+No real solutions.
 
 \end{document}  
