--- a/practice.tex
+++ b/practice.tex
@@ -18,66 +18,51 @@
 \maketitle
 
 Math AoPS \newline
-5.37) \newline
-Compute $\frac{x}{y}$ \newline
-$
-x + \frac{1}{y} = 4 \text{ ; }
-x = -\frac{1}{y} + 4
-$ \newline
-$
-y + \frac{1}{x} = \frac{1}{4} \text{ ; }
-y = -\frac{1}{x} + \frac{1}{4}
-$ \newline
+5.39) \newline
+$2a - 3b + 5c + d = -41$ \newline
+$7a + 2b - c = -28$ \newline
+$-a + 2b - 7c - 2d = 46$ \newline
+$3a + 7b -6c + d = 31$ \newline
 
 $
-y + \frac{1}{-\frac{1}{y} + 4} = \frac{1}{4}
+\left[
+\begin{array}{cccc|c}
+2 & -3 & 5 & 1 & -41 \\
+7 & 2 & -1 & 0 & -28 \\
+-1 & 2 & -7 & -2 & 46 \\
+3 & 7 & -6 & 1 & 31
+\end{array}
+\right]
 $ \newline
 $
-\frac{-\frac{1}{y} + 4}{-\frac{1}{y} + 4}
-\times y +
-\frac{1}{-\frac{1}{y} + 4} = \frac{1}{4}
+\left[
+\begin{array}{cccc|c}
+2 & -3 & 5 & 1 & -41 \\
+7 & 2 & -1 & 0 & -28 \\
+-2 & 4 & -14 & -4 & 92 \\
+3 & 7 & -6 & 1 & 31
+\end{array}
+\right]
 $ \newline
 $
-\frac{-1 + 4y + 1}{-\frac{1}{y} + 4}
-= \frac{1}{4}
+\left[
+\begin{array}{cccc|c}
+2 & -3 & 5 & 1 & -41 \\
+7 & 2 & -1 & 0 & -28 \\
+0 & 1 & -9 & -3 & 51 \\
+3 & 7 & -6 & 1 & 31
+\end{array}
+\right]
 $ \newline
 $
-\frac{4y}{-\frac{1}{y} + 4}
-= \frac{1}{4}
+\left[
+\begin{array}{cccc|c}
+2 & -3 & 5 & 1 & -41 \\
+7 & 2 & -1 & 0 & -28 \\
+0 & 1 & -9 & -3 & 51 \\
+3 & 7 & -6 & 1 & 31
+\end{array}
+\right]
 $ \newline
-$
-\frac{16y}{-\frac{1}{y} + 4}
-= 1
-$ \newline
-$
-16y = -\frac{1}{y} + 4
-$ \newline
-$
-16y + \frac{1}{y} = 4
-$ \newline
-$
-\frac{16y^2}{y} + \frac{1}{y} = 4
-$ \newline
-$
-\frac{16y^2 + 1}{y} = 4
-$ \newline
-$
-16y^2 + 1 = 4y
-$ \newline
-$
-16y^2 - 4y + 1 = 0
-$ \newline
-$
-\frac{-b \pm \sqrt{b^2 - 4ac}}{2a}
-= \frac{4 \pm \sqrt{\left(-4\right)^2 - 4\times 16\times 1}}
-{2\times 16}
-$ \newline
-$
-\frac{4 \pm \sqrt{16 - 64}}
-{32}
-= \frac{4 \pm \sqrt{-48}}
-{32}
-$ \newline
-No real solutions.
 
 \end{document}  
