--- a/practice.tex
+++ b/practice.tex
@@ -18,51 +18,17 @@
 \maketitle
 
 Math AoPS \newline
-5.39) \newline
-$2a - 3b + 5c + d = -41$ \newline
-$7a + 2b - c = -28$ \newline
-$-a + 2b - 7c - 2d = 46$ \newline
-$3a + 7b -6c + d = 31$ \newline
+6.1.3) \newline
+$a_{dc} = 68 \text{ mi}^2 $ \newline
+$p_{dc} = 570,000 \text{ people} $ \newline
 
+Find people per $\text{mi}^2$ \newline
 $
-\left[
-\begin{array}{cccc|c}
-2 & -3 & 5 & 1 & -41 \\
-7 & 2 & -1 & 0 & -28 \\
--1 & 2 & -7 & -2 & 46 \\
-3 & 7 & -6 & 1 & 31
-\end{array}
-\right]
+\frac{570,000 \text{ people}}{68 \text{ mi}^2} = 
+\frac{\text{ people}}{\text{ mi}^2}
 $ \newline
-$
-\left[
-\begin{array}{cccc|c}
-2 & -3 & 5 & 1 & -41 \\
-7 & 2 & -1 & 0 & -28 \\
--2 & 4 & -14 & -4 & 92 \\
-3 & 7 & -6 & 1 & 31
-\end{array}
-\right]
-$ \newline
-$
-\left[
-\begin{array}{cccc|c}
-2 & -3 & 5 & 1 & -41 \\
-7 & 2 & -1 & 0 & -28 \\
-0 & 1 & -9 & -3 & 51 \\
-3 & 7 & -6 & 1 & 31
-\end{array}
-\right]
-$ \newline
-$
-\left[
-\begin{array}{cccc|c}
-2 & -3 & 5 & 1 & -41 \\
-7 & 2 & -1 & 0 & -28 \\
-0 & 1 & -9 & -3 & 51 \\
-3 & 7 & -6 & 1 & 31
-\end{array}
-\right]
-$ \newline
+
+
+
 
 \end{document}  
