CW Numbers with d occurences of digit d (done)

--- a/practice.tex
+++ b/practice.tex
@@ -18,14 +18,28 @@
 \maketitle
 
 Math AoPS \newline
-6.1.3) \newline
-$a_{dc} = 68 \text{ mi}^2 $ \newline
-$p_{dc} = 570,000 \text{ people} $ \newline
-
-Find people per $\text{mi}^2$ \newline
+6.1.5) \newline
+Alice changes size several times. The \newline ratio of her original height to her second \newline height is 24 to 5. The ratio of her second \newline height to her third height is 1 to 12. The \newline ratio of her original height to her fourth \newline height is 16 to 1. The tallest of these four \newline heights is 10 feet. What is her shortest \newline height? \newline
 $
-\frac{570,000 \text{ people}}{68 \text{ mi}^2} = 
-\frac{\text{ people}}{\text{ mi}^2}
+\frac{a}{b} = \frac{24}{5}
+= \frac{48}{10}
+$ \newline
+$
+\frac{b}{c} = \frac{1}{12}
+= \frac{5}{60} = \frac{10}{120}
+$ \newline
+$
+\frac{a}{d} = \frac{16}{1}
+= \frac{48}{3}
+$ \newline
+Max height $= 10$ ft \newline
+Find min height. \newline
+$
+\frac{3}{120} = \frac{x}{10}
+$ \newline
+$
+x = 10 \times \frac{3}{120}
+= \frac{3}{12} \text{ ft}
 $ \newline
 
 
