CW Simple letter removal (partial)

--- a/practice.tex
+++ b/practice.tex
@@ -18,30 +18,27 @@
 \maketitle
 
 Math AoPS \newline
-6.1.5) \newline
-Alice changes size several times. The \newline ratio of her original height to her second \newline height is 24 to 5. The ratio of her second \newline height to her third height is 1 to 12. The \newline ratio of her original height to her fourth \newline height is 16 to 1. The tallest of these four \newline heights is 10 feet. What is her shortest \newline height? \newline
+6.4.3) \newline
+a. \newline
 $
-\frac{a}{b} = \frac{24}{5}
-= \frac{48}{10}
+\frac{63}{a} = \frac{30}{100} \text{ ; }
+\frac{a}{63} = \frac{100}{30}
 $ \newline
 $
-\frac{b}{c} = \frac{1}{12}
-= \frac{5}{60} = \frac{10}{120}
+a = 63 \times \frac{10}{3}
+= 21 \times 3 \times \frac{10}{3}
+= 21 \times 10
+= 210
+$ \newline
+b. \newline
+$
+\frac{125}{b} = \frac{75}{100} \text{ ; }
+\frac{b}{125} = \frac{4}{3}
 $ \newline
 $
-\frac{a}{d} = \frac{16}{1}
-= \frac{48}{3}
+b = 125 \times \frac{4}{3}
+= \frac{500}{3}
 $ \newline
-Max height $= 10$ ft \newline
-Find min height. \newline
-$
-\frac{3}{120} = \frac{x}{10}
-$ \newline
-$
-x = 10 \times \frac{3}{120}
-= \frac{3}{12} \text{ ft}
-$ \newline
-
 
 
 
